force-app/main/default/objects/UserException__c/UserException__c.object-meta.xml
<CustomObject>
    <label>User Exception</label>
    <nameField>
        <displayFormat>UE-{0000000000}</displayFormat>
        <label>User Exception Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>