force-app/main/default/objects/UserException__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <referenceTo>ExpenseCategory__c</referenceTo>
    <relationshipLabel>User Exceptions</relationshipLabel>
    <relationshipName>UserExceptions</relationshipName>
    <type>Lookup</type>
</CustomField>