force-app/main/default/objects/UserException__c/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <label>Exception Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>REDUCED</fullName>
                <label>Reduced</label>
            </value>
            <value>
                <fullName>EXEMPT</fullName>
                <label>Exempt</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>